<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleCalculator</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="strButton1">1</string>
    <string name="strButton2">2</string>
    <string name="strButton3">3</string>
    <string name="strButton4">4</string>
    <string name="strButton5">5</string>
    <string name="strButton6">6</string>
    <string name="strButton7">7</string>
    <string name="strButton8">8</string>
    <string name="strButton9">9</string>
    <string name="strButton0">0</string>
    <string name="strButtonPlus">+</string>
    <string name="strButtonMinus">-</string>
    <string name="strButtonDivide">/</string>
    <string name="strButtonMultiply">*</string>
    <string name="strMemoryClear">MC</string>
    <string name="strMemoryPlus">M+</string>
    <string name="strMemoryMinus">M-</string>
</resources>
